# curiostack-backend

./: .gitignore  DEPLOYMENT.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/curiostack/: cli.py  config.py  logger.py  main.py
src/curiostack/database/: ai_ml_web_sources.db  common_technology_web_sources.db  cybersecurity_web_sources.db  data_science_web_sources.db
src/curiostack/niches/: urls.json
src/curiostack/preprocessing/: __init__.py  content_processor.py  content_writer.py
src/curiostack/scraping/: __init__.py  content_extractor.py  crawler.py
src/curiostack/utils/: __init__.py
src/curiostack/utils/content/: __init__.py  extractor_helper.py  writer_helper.py
src/curiostack/utils/crawler/: __init__.py  crawler_helper.py
tests/: cli_testing.py  curioshell.py  ipshdfsd.ipynb  loger_example.py  testing.py  vimtestingfile.py
